EIP-1559 - Prevent Max Fee and Max Amount from wrapping on confirmation screen

--- a/ui/components/app/transaction-detail-item/index.scss
+++ b/ui/components/app/transaction-detail-item/index.scss
@@ -35,4 +35,8 @@
   &__subtext {
     text-align: end;
   }
+
+  .currency-display-component {
+    display: inline;
+  }
 }
